update inicio, menu, carrito

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,9 @@
     <string name="confirmar_passwordd">Confirmar contraseña</string>
     <string name="verificar">Verificar</string>
     <string name="guardar">Guardar</string>
+    <string name="items">Items</string>
+    <string name="categorias">Categorias</string>
+    <string name="aplicar">Aplicar</string>
+    <string name="siguiente">Siguiente</string>
 
 </resources>
